--- a/myindex.j2
+++ b/myindex.j2
@@ -1,1 +1,3 @@
-this is  my dynamic page
+<h1> this is  my dynamic page </h1>
+<h1> This node Os is: {{ ansible_os_family }} </h1>
+<h1> This node java version : {{ myjavapackonubuntu }}</h1>
